@@ -1,3 +1,10 @@
+2004-12-24  Per Bothner  <per@bothner.com>
+
+	* kawa/lang/SyntaxPattern.java (allocVars): New helper method.
+	* kawa/lang/Translator.java (matchArray): New field, moved
+	here from syntax_case.work.
+	* kawa/standard/syntax_case.java: Fix bugs when nested syntax-cases.
+
 2004-12-23  Per Bothner  <per@bothner.com>
 
 	* kawa/lang/Translator.java (setLineOf): Do nothing if QuoteExp.
